# Comp_escalavel_a2

./: .gitignore  README.md  accounts_generator.py  classificador.cpp  csv_extractor.cpp  csv_extractor.h  csv_test.cpp  data.csv  df.cpp  df.h  home.py  join1.csv  join2.csv  join3.csv  join4.csv  join5.csv  main.cpp  media1.csv  media2.csv  media3.csv  media4.csv  media5.csv  requeriments.txt  requirements.txt  resultado1.csv  resultado3.csv  resultado4.csv  resultado5.csv  teste,txt  teste.cpp  teste_Ale.cpp  testes.cpp  threads.cpp  threads.h  threads2.cpp  threads2.h  transaction_4_2.csv  transactions.csv  transactions_generator.py  trat_filtra_reg.cpp  (+4 more)
dashboard/: anormalidades.csv  classificacao_contas.csv  dashboard.ipynb  home.py  summary_states.csv  top_10_cidades.csv  transacoes_dia.csv
data/: benchmarkingCSV.csv  benchmarkingDB.csv  data.db-journal
entrega_07_04/: csv_extractor.h  df.cpp  teste_Ale.cpp  threads.h  tratadores_S.cpp  tratadores_S.h
grpc/: CMakeLists.txt  README.md  dataframe.proto  dataframe_pb2.py  dataframe_pb2_grpc.py  grpc_client.py  requirements.txt  server.cc
grpc/data/: client_abnormal.csv  client_accountByClass.csv  client_accountClass.csv  client_addTransaction.csv  client_transactionsInfo.csv  graphs.py
grpc/plots/: graphs.py
grpc/proto/: dataframe.proto
grpc/test/: client_abnormal.py  client_accountByClass.py  client_accountClass.py  client_addTransaction.py  client_tests_lib.py  client_transactionsInfo.py
include/: csv_extractor.h  df.h  sql_extractor.h  threads.h  tratadores.h
output/: abnormal_transactions.csv  (+4 more)
(+24 files in other folders)
